<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TDAM Aplicacion</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_settings_activity">Settings_activity</string>
    <string name="dc_llamar">Llamar</string>
    <string name="dc_enviar_mensaje">Enviar Mensaje</string>
    <string name="dc_eleccion">Elegir</string>
    <string name="preference_Contactos_Asc">A-Z</string>
    <string name="preference_Contactos_Desc">Z-A</string>
    <string name="preference_Contactos_Nombre">Nombre</string>
    <string name="preference_Contactos_Apellido">Apellido</string>
    <string name="preference_contacto_osummary">ordenar contactos </string>
    <string name="preference_Contactos_Ordenamiento">Ordenamiento</string>
    <string name="title_activity_new__contact_web_sms">New_ContactWebSms</string>
    <string name="preference_Contactos_Filtros_Todos">Sin Filtro</string>
    <string name="preference_Contactos_Filtros_SoloConTelefono">Solo Telefono</string>
    <string name="preference_Contactos_Filtros_SoloConEmail">Solo Email</string>
    <string name="preference_Contactos_Filtros_SoloConWebUser">Solo Usuario Web</string>
    <string name="preference_Contactos_PorNombreOApellidoKey">Ordenar Por Nombre o Apellido</string>
    <string name="preference_Contactos_PorNombreOApellidoSummary">Ordenar Por Nombre o Apellido</string>
    <string name="preference_Contactos_PorNombreOApellidoTitle">Ordenar Por Nombre o Apellido</string>
    <string name="preference_Contactos_FiltroUsuariokey">Filtrar Usuarios</string>
    <string name="preference_Contactos_FiltroUsuarioTitle">Filtrar Usuarios</string>
    <string name="preference_Contactos_FiltroUsuarioSummary">Filtrar Usuarios</string>
    <string name="preference_Contactos_VerFotokey">Ver Fotografia</string>
    <string name="preference_Contactos_VerFotoTitle">Ver Fotografia</string>
    <string name="preference_Contactos_VerFotoSummary">Ver Fotografia</string>
    <string name="title_activity_historial__llamadas">Historial_Llamadas</string>
    <string name="title_activity_historial__sms">Historial_Sms</string>
    <string name="title_activity_historial__web_msg">Historial_WebMsg</string>
    <string name="title_activity_historial__mail">Historial_Mail</string>
    <string name="preference_Historial_Filtrarkey">Filtrar Historial</string>
    <string name="preference_Historial_FiltrarTitle">Filtrar Historial</string>
    <string name="preference_Historial_FiltrarSummary">Filtrar Historial</string>
    <string name="preference_Historial_Ordenarkey">Ordenar Historial</string>
    <string name="preference_Historial_OrdenarTitle">Ordenar Historial</string>
    <string name="preference_Historial_OrdenarSummary">Ordenar Historial</string>
    <string name="preference_Historial_FiltrarNada">No Filtrar</string>
    <string name="preference_Historial_FiltrarEntradas">Solo Acciones de Entrada</string>
    <string name="preference_Historial_FiltrarSalientes">Solo Acciones de Salida</string>
    <string name="preference_Historial_OrdenarFechaReciente">Nuevos primero</string>
    <string name="preference_Historial_OrdenarAsendente">Viejos primero</string>
    <string name="preference_InicioSesion_Userkey">NombreUsuario</string>
    <string name="preference_InicioSesion_UserTitle">NombreUsuario</string>
    <string name="preference_InicioSesion_UserSummary">NombreUsuario</string>
    <string name="preference_InicioSesion_UserPasskey">PasswordUsuario</string>
    <string name="preference_InicioSesion_UserPassTitle">PasswordUsuario</string>
    <string name="preference_InicioSesion_UserPassSummary">PasswordUsuario</string>
    <string name="title_activity_detalle__msg_web">Detalle_Msg_web</string>
    <string name="detalle_mensajeWeb_Id">El detalle del mensaje es:</string>
    <string name="detalle_mensajeWeb_remitente">El remitente es:</string>
    <string name="detalle_mensajeWeb_destinatario">El destinatario es:</string>
    <string name="detalle_mensajeWeb_fecha">La fecha del mensaje es:</string>
    <string name="detalle_mensajeWeb_detalle">El  mensaje es:</string>
    <string name="notificacion_ServerError">A ocurrido un error en el server</string>
    <string name="notificacion_FatalError">A ocurrido un error fatal</string>
    <string name="notificacion_SuccesUser">El Usuario se ha Registrado Con Exito</string>
    <string name="notificacion_SuccesMessage">El Mensaje se ha Enviado Con Exito</string>
    <string name="notificacion_ErrorMessage">El Mensaje no se ha Enviado ha ocurrido un error</string>
    <string name="notificacion_DuplicateUser">Ya existe un Usuario Registrado con ese Nombrer</string>
    <string name="dialog_info">Alerta</string>
    <string name="dialog_error">Se ha Producido un error</string>
    <string name="dialog_errormsg">Se ha Producido un error en el envio del mensaje</string>
    <string name="dialog_btn">Aceptar</string>
    <string name="buscar">Buscar</string>
    <string name="dc_numeros">Números</string>
    <string name="dc_email">Email</string>
    <string name="dc_msjWeb">Mensajeria Web</string>
    <string name="dc_historial">Historial</string>
    <string name="con_estado">Estado de la Conexion</string>
    <string name="con_wifi">WiFi</string>
    <string name="con_3g">3G</string>
    <string name="nombre_usuario_web">El Nombre del Usuario web</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="numeros">Números</string>
    <string name="btn_agregar">Agregar</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_password">Contraseña</string>
    <string name="btn_inicio_sesion">Iniciar Sesion</string>
    <string name="main_mensaje_web">Mensajes Web</string>
    <string name="main_contactos">Contactos</string>
    <string name="main_historial">Historial</string>
    <string name="main_perfil">Mi Perfil</string>
    <string name="main_conectividad">Conectividad</string>
    <string name="leyenda_nuevo_usuario">Ingrese los datos para el registro de un nuevo ususario</string>
    <string name="nu_nombre_usuario">Nombre Usuario</string>
    <string name="nu_password">Contraseña</string>
    <string name="nu_repetir_password">Contraseña</string>
    <string name="nu_email">Email</string>
    <string name="nu_btn_agregar">Agregar</string>
    <string name="sw">Servicio de Mensajes Web</string>
    <string name="sw_nombre_usuario">Nombre de Usuario</string>
    <string name="sw_destinatario">Destinatario</string>
    <string name="sw_mensaje">Mensaje</string>
    <string name="sw_btn_enviar">Enviar</string>
    <string name="up_nombre_usuario">Nombre de Usuario</string>
    <string name="up_email">Email</string>
    <string name="up_usuario">Usuario</string>
    <string name="up_password">Contraseña</string>
    <string name="up_repetir_password">Repetir Contraseña</string>
    <string name="up_btn_guardar">Guardar</string>
    <string name="activity_contacts_title">User Settings</string>
    <string name="activity_historial_title">Historial Settings</string>
    <string name="nuevo_usuario_web_title">Nuevo Usuario Web</string>
    <string name="title_preference_forma_ordenamiento">Forma de Ordenamiento</string>
    <string name="menu_nuevo_usuario">Registrar Nuevo Usuario</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_historial__bluetooth">Historial_Bluetooth</string>
    <string name="title_activity_new_contact_bluetooth">NewContactBluetooth</string>
    
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>

</resources>