<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:gravity="center_horizontal"
    android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10px" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                 >

                <ImageView
                    android:id="@+id/imgDetalleContacto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_contactlist" />

                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="50dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                
	            <TextView
	                android:id="@+id/textView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/numeros"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="@android:color/white" />
	
	            <ListView
	                android:id="@+id/listNumeros"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	            </ListView>

	        </LinearLayout>
	            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nu_email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <ListView
                android:id="@+id/listEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dc_msjWeb"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <ListView
                android:id="@+id/listMensajeriaWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnHistorial_DetalleContacto"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/dc_historial" />
            </LinearLayout>
        </LinearLayout>


</LinearLayout>