<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_main" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">       
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/Imagen_Inicio"
            android:layout_width="match_parent"
            android:layout_height="150dp"

            android:src="@drawable/people" />

        <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp" ></LinearLayout>
        
        <LinearLayout
          android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
            
            	<TextView 
            	    android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
            	    android:text="@string/nombre_usuario"
            	    android:layout_gravity="center"
            	    android:textColor="@android:color/white"/>
            	
		        <EditText
		            android:id="@+id/init_NombUser"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="0.5" 
		            android:singleLine="true"/>
		</LinearLayout>
		
         <LinearLayout
          android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
            
            	<TextView 
            	    android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
            	    android:text="@string/txt_password"
            	    android:layout_gravity="center"
            	    android:textColor="@android:color/white"
            	    />
            	
		        <EditText
		            android:id="@+id/init_UserPassword"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="0.5" 
		            android:singleLine="true"
		            android:password="true"/>
		        
		</LinearLayout>
        
        
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp" ></LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/init_btnInicio"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/btn_inicio_sesion" />
        
    </LinearLayout>

</LinearLayout>