<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical" >


        
<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    
    <LinearLayout
	    android:id="@+id/linervmain3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:orientation="vertical">
	    
    		<LinearLayout
    		    android:layout_width="match_parent"
    		    android:layout_height="100dp"
    		    android:orientation="vertical" >
		    
    		     <ImageButton
                        android:id="@+id/imgbtn_MensajesWeb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/image_notification" 
                        android:layout_gravity="center"
                        android:background="@drawable/border_icons"
                        />
    		     
    		     <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_mensaje_web"
                        android:layout_gravity="center"
                        android:textSize="18dp"
                        android:textColor="@android:color/white" />
    		     
    		    
    		</LinearLayout>
	    		<LinearLayout 
		    android:id="@+id/linervmain1"
		    android:layout_width="match_parent"
		    android:layout_height="150dp"
		    android:orientation="horizontal">
		    
		    <LinearLayout 
			    android:id="@+id/linervmain7"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_weight="1">
                    
                    <ImageButton
                        android:id="@+id/imgbtn_contactos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_contacts" 
                        android:layout_gravity="center"
                        android:background="@drawable/border_icons"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_contactos"
                        android:layout_gravity="center"
                        android:textSize="18dp"
                        android:textColor="@android:color/white" />
                    
               </LinearLayout>
               
		     <LinearLayout 
			    android:id="@+id/linervmain5"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imgbtn_historial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_historial" 
                        android:background="@drawable/border_icons"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_historial"
                        android:layout_gravity="center"
                        android:textSize="18dp" 
                        android:textColor="@android:color/white"/>
                    
                    </LinearLayout>
                    
               </LinearLayout>
               
	
               <LinearLayout 
                android:id="@+id/linervmain10"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal">
		     
                    <LinearLayout 
					    android:id="@+id/linervmain7"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:orientation="vertical"
					    android:layout_weight="1">
                    
                   
                    <ImageButton
                        android:id="@+id/imgbtn_perfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_perfil" 
                        android:background="@drawable/border_icons"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_perfil"
                        android:layout_gravity="center"
                        android:textSize="18dp" 
                        android:textColor="@android:color/white"/>
                    
                </LinearLayout>
                
                     <LinearLayout 
					    android:id="@+id/linervmain11"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:orientation="vertical"
					    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imgbtn_conectividad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_conectivity"
                        android:background="@drawable/border_icons" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_conectividad"
                        android:layout_gravity="center"
                        android:textSize="18dp" 
                        android:textColor="@android:color/white"/>
                
            	</LinearLayout>
            </LinearLayout>
         </LinearLayout>
         


</ScrollView>

</LinearLayout>